--- a/assembly/playground.html
+++ b/assembly/playground.html
@@ -621,7 +621,7 @@ SUB R4, R2, R1"></textarea>
                         const address = parseInt(parts[1]) - 1; // -1 because line numbers start at 1
                         if (!isNaN(address) && address >= 0 && address < code_length) {
                             currentLine = address;
-                            addLogEntry(`Jumped to the address:  ${address}`, logId);
+                            addLogEntry(`Jumped to the address:  ${address + 1}`, logId);
                         } else {
                             addLogEntry(`Error: JMP instruction must have a valid address as a parameter:  ${line}`, logId);
                         }
@@ -636,7 +636,7 @@ SUB R4, R2, R1"></textarea>
                         if (registersObj['CMP'] === 0){
                             if (!isNaN(address) && address >= 0 && address < code_length) {
                                 currentLine = address;
-                                addLogEntry(`Jumped to the address:  ${address}`, logId);
+                                addLogEntry(`Jumped to the address:  ${address + 1}`, logId);
                             } else {
                                 addLogEntry(`Error: JE instruction must have a valid address as a parameter:  ${line}`, logId);
                             }
@@ -652,7 +652,7 @@ SUB R4, R2, R1"></textarea>
                         if (registersObj['CMP'] !== 0){
                             if (!isNaN(address) && address >= 0 && address < code_length) {
                                 currentLine = address;
-                                addLogEntry(`Jumped to the address:  ${address}`, logId);
+                                addLogEntry(`Jumped to the address:  ${address + 1}`, logId);
                             } else {
                                 addLogEntry(`Error: JNE instruction must have a valid address as a parameter:  ${line}`, logId);
                             }
@@ -669,7 +669,7 @@ SUB R4, R2, R1"></textarea>
                         if(registersObj['ZF'] !== undefined && registersObj['ZF'] === 0){
                             if (!isNaN(address) && address >= 0 && address < code_length) {
                                 currentLine = address;
-                                addLogEntry(`Jumped to the address:  ${address}`, logId);
+                                addLogEntry(`Jumped to the address:  ${address + 1}`, logId);
                             } else {
                                 addLogEntry(`Error: JZ instruction must have a valid address as a parameter:  ${line}`, logId);
                             }
@@ -685,7 +685,7 @@ SUB R4, R2, R1"></textarea>
                         if(registersObj['CMP'] <= 0){
                             if (!isNaN(address) && address >= 0 && address < code_length) {
                                 currentLine = address;
-                                addLogEntry(`Jumped to the address:  ${address}`, logId);
+                                addLogEntry(`Jumped to the address:  ${address + 1}`, logId);
                             } else {
                                 addLogEntry(`Error: JLE instruction must have a valid address as a parameter:  ${line}`, logId);
                             }
@@ -701,7 +701,7 @@ SUB R4, R2, R1"></textarea>
                         if(registersObj['CMP'] >= 0){
                             if (!isNaN(address) && address >= 0 && address < code_length) {
                                 currentLine = address;
-                                addLogEntry(`Jumped to the address:  ${address}`, logId);
+                                addLogEntry(`Jumped to the address:  ${address + 1}`, logId);
                             } else {
                                 addLogEntry(`Error: JGE instruction must have a valid address as a parameter:  ${line}`, logId);
                             }
@@ -717,7 +717,7 @@ SUB R4, R2, R1"></textarea>
                         if(registersObj['CMP'] > 0){
                             if (!isNaN(address) && address >= 0 && address < code_length) {
                                 currentLine = address;
-                                addLogEntry(`Jumped to the address:  ${address}`, logId);
+                                addLogEntry(`Jumped to the address:  ${address + 1}`, logId);
                             } else {
                                 addLogEntry(`Error: JG instruction must have a valid address as a parameter:  ${line}`, logId);
                             }
@@ -733,7 +733,7 @@ SUB R4, R2, R1"></textarea>
                         if(registersObj['CMP'] < 0){
                             if (!isNaN(address) && address >= 0 && address < code_length) {
                                 currentLine = address;
-                                addLogEntry(`Jumped to the address:  ${address}`, logId);
+                                addLogEntry(`Jumped to the address:  ${address + 1}`, logId);
                             } else {
                                 addLogEntry(`Error: JL instruction must have a valid address as a parameter:  ${line}`, logId);
                             }
