--- a/assembly/playground.html
+++ b/assembly/playground.html
@@ -472,6 +472,8 @@ SUB R4, R2, R1"></textarea>
         
         // Add log entry
         function addLogEntry(message, logId) {
+            message = 'Line '.concat(currentLine + 1).concat(": ").concat(message);
+            
             const log = document.getElementById(logId);
             const entry = document.createElement('div');
             entry.className = 'mb-1 text-sm';
